=================
=  CHANGE LOG   =
=================

J2SSH Maverick 1.5.5 - May 6, 2016

Bug Fixes
	o Fixed issue with EC keys when Bouncycastle is not on the classpath.
    o Removed ecdh-sha2-nistp521 temporarily as it's failing.

=================
=  HISTORY      =
=================

J2SSH Maverick 1.5.4 - Apr 1, 2016

Features
	o Added ECDSA public key implementations ecdsa-sha2-nistp256, ecdsa-sha2-nistp384. ecdsa-sha2-nistp521
	o Added EC Diffie Hellman key exchange implementations ecdh-sha2-nistp256, ecdh-sha2-nistp384, ecdh-sha2-nistp521
	
Bug Fixes
	o Deprecated CBC ciphers caused private key encryption/decryption to fail due to ciphers being missing from CompomentFactory. We now use ciphers directly to avoid conflicts with SSH configuration preferences.
	
----------------

J2SSH Maverick 1.5.3 - Jan 27, 2016

Features
	o Update examples to use threaded-mode clients to prevent confusion for new users expecting event type behavior from default single threaded mode.
	o Deprecated CBC and ArcFour ciphers.
	
-----------------

J2SSH Maverick 1.5.2 - Aug 15, 2015

Features
	o Added SimpleLogger implementation.
    o Added Dynamic Port Forwarding.
	o Prepared pom.xml for maven central via Nexus.
	
-----------------

J2SSH Maverick 1.5.1 - Jan 2, 2015

Bug Fixes
	o Removed references to com.maverick namespace which caused some startup issues.
	o Context and ComponentManager are now initialised correctly.
	o Added missing and default NoLogger implementation to prevent startup errors caused by no logging implementation being present.
	
-----------------

J2SSH Maverick 1.5.0 - Aug 28, 2014

Features
    o New open source branch converted to maven.
    o Converted source to 1.5 source compatibility. 
    o Renamed all base packages to com.sshtools.
    o Re-factored logging interface, removed used of event service and replaced with custom interface.
    
Bug Fixes